# everybit

./: Cargo.toml  Makefile  README.md  README.org
benches/: my_benchmark.rs  rotate_bench.rs
src/: bitarray.rs  lib.rs  main.rs  modulo.c
