[package]
name = "everybit"
version = "0.1.0"
authors = ["Derek Rhodes <physci@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"       # command line args
rand = "0.7.2"        # random numbers

[dev-dependencies]
criterion = "0.3"     # benchmarks

[lib]
name = "bitarray"
path = "src/lib.rs"

[[bench]]
name = "rotate_bench"
harness = false